...
                )

                //Favorite icon (only when logged in)
                if (isLoggedIn) {
                    IconButton(
                        onClick = onFavoriteClick,
                        modifier = Modifier.testTag("animalFavoriteIcon")
                    ) {
                        Icon(
                            imageVector = if (isFavorite)
                                Icons.Filled.Favorite
                            else
                                Icons.Outlined.FavoriteBorder,
...
