...
                    Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("drawerItemCatalogue")
                else if (item.route == NavigationRoutes.FAVORITES)
                    Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("drawerItemFavorites")
                else if (item.route == NavigationRoutes.OWNERSHIP_LIST)
                    Modifier
                        .padding(NavigationDrawerItemDefaults.ItemPadding)
                        .testTag("drawerItemOwnershipList")
                else if (item.route == NavigationRoutes.FOSTERING_LIST)
                    Modifier
...
